Closed Bug 444996 Opened 16 years ago Closed 16 years ago

"‘INT_MAX’ was not declared in this scope" compiling nsPNGDecoder.cpp

Categories

(Core :: Graphics: ImageLib, defect)

x86
All
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: ajschult784, Assigned: longsonr)

References

Details

(Keywords: fixed1.9.0.2)

Attachments

(1 file)

After http://hg.mozilla.org/index.cgi/mozilla-central/rev/bcbd2408632b, I fail compiling nsPNGDecoder.cpp,

modules/libpr0n/decoders/png/nsPNGDecoder.cpp:658: error: ‘INT_MAX’ was not declared in this scope

nsPNGDecoder.cpp needs to include limits.h
Assignee: vladimir → longsonr
Status: NEW → ASSIGNED
Attachment #329439 - Flags: superreview?(pavlov)
Attachment #329439 - Flags: review?(pavlov)
Doesn't compile with Visual Studio 2003 either.
OS: Linux → All
Attachment #329439 - Flags: superreview?(pavlov)
Attachment #329439 - Flags: superreview+
Attachment #329439 - Flags: review?(pavlov)
Attachment #329439 - Flags: review+
checked in.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment on attachment 329439 [details] [diff] [review]
patch (Checkin to 1.9.0.2: Comment 9)

This patch needs to be landed on 1.9.0 branch as well. See bug 452194.
Attachment #329439 - Flags: approval1.9.0.2?
Comment on attachment 329439 [details] [diff] [review]
patch (Checkin to 1.9.0.2: Comment 9)

Approved for 1.9.0.2. Please land in CVS. a=ss
Attachment #329439 - Flags: approval1.9.0.2? → approval1.9.0.2+
Robert, just fyi, if you want this in 1.9.0.2, we need it landed today before midnight PDT.
Comment on attachment 329439 [details] [diff] [review]
patch (Checkin to 1.9.0.2: Comment 9)

Checking in 1.9.0.2
nsPNGDecoder.cpp; new revision: 1.83; previous revision: 1.82
done
Attachment #329439 - Attachment description: patch → patch (Checkin to 1.9.0.2: Comment 9)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: