Bug 444996 - Compilation broken on various platforms. INT_MAX was not declared in this scope. r+sr=vladimir